tests/ycsb/results/bw_bench_20260416_232154/phase1_load.txt
Traceback (most recent call last):
  File "/home/xdjtomato/下载/Redis with CXL/redis-CXL in v6.2.21/tests/ycsb/ycsb-0.17.0/bin/ycsb", line 347, in <module>
    sys.exit(main())
             ^^^^^^
  File "/home/xdjtomato/下载/Redis with CXL/redis-CXL in v6.2.21/tests/ycsb/ycsb-0.17.0/bin/ycsb", line 239, in main
    usage=usage(),
          ^^^^^^^
  File "/home/xdjtomato/下载/Redis with CXL/redis-CXL in v6.2.21/tests/ycsb/ycsb-0.17.0/bin/ycsb", line 125, in usage
    print >> output, "%s command database [options]" % sys.argv[0]
    ~~~~~~^^~~~~~~~
TypeError: unsupported operand type(s) for >>: 'builtin_function_or_method' and '_io.BytesIO'. Did you mean "print(<message>, file=<output_stream>)"?
